# pm-spotlight

./: .gitignore  Cargo.toml  README.md
src/: app_builder.rs  main.rs  user_event.rs  user_event_handler.rs
src/config/: config_manager.rs
src/gui/: app_builder.rs  message_event.rs  pm_spotlight_app.rs  user_event.rs  user_event_handler.rs
src/helpers/: clipboard_management.rs  filenames.rs
src/search/: emoji_searcher.rs  file_searcher.rs  search_manager.rs  search_result_entry.rs  searcher.rs  searchers_provider.rs
