[package]
edition = "2021"
name = "pm-spotlight"
version = "0.1.0"

[profile.release]
strip = true

[dependencies]
dirs = "6.0.0"
fltk = "1.5.2"
phf = { version = "0.11.3", features = ["macros"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
clipboard = "0.5.0"
