[package]
edition = "2021"
name = "pm-spotlight"
version = "0.1.0"

[profile.release]
strip = true

[dependencies]
dirs = "6.0.0"
# 1.3.5+ versions suffer from a bug (typing `:ki` causes a crash).
fltk = { git = "https://github.com/fltk-rs/fltk-rs", rev = "a0402da3d160f55a5d41b1a8daec3d7a41f58fbc" }
phf = { version = "0.11.3", features = ["macros"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
clipboard = "0.5.0"
